Update sample data