@@ -2,6 +2,7 @@ package seedu.address.model.util;
 
 import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -24,25 +25,35 @@ public class SampleDataUtil {
         return new Person[] {
             new Patient(new Name("Alex"), new Phone("87438807"),
                 new Address("Blk 30 Geylang Street 29, #06-40"),
-                new Tag("low"), new Note("Peanut allergy"), Collections.emptyList()),
+                new Tag("low"),
+                List.of(new Note("Peanut allergy")),
+                List.of(new Appointment("31-12-2099", "09:00"))),
             new Patient(new Name("Bernice Yu"), new Phone("99272758"),
                 new Address("Blk 30 Lorong 3 Serangoon Gardens, #07-18"),
-                new Tag("medium"), new Note("Requires assistance with eating"),
-                new Appointment("02-11-2026", "09:00")),
+                new Tag("medium"),
+                List.of(new Note("Requires assistance with eating")),
+                List.of(new Appointment("15-01-2100", "11:30"),
+                        new Appointment("28-02-2100", "08:45"))),
             new Patient(new Name("Charlotte Oliveiro"), new Phone("93210283"),
                 new Address("Blk 11 Ang Mo Kio Street 74, #11-04"),
-                new Tag("low"), new Note("Asthma (persistent)"),
-                new Appointment("08-03-2026", "10:30")),
+                new Tag("low"),
+                List.of(new Note("Asthma (persistent)")),
+                Collections.emptyList()),
             new Patient(new Name("David Li"), new Phone("91031282"),
                 new Address("Blk 436 Serangoon Gardens Street 26, #16-43"),
-                new Tag("medium")),
+                new Tag("medium"),
+                Collections.emptyList(),
+                Collections.emptyList()),
             new Patient(new Name("Irfan Ibrahim"), new Phone("92492021"),
                 new Address("Blk 47 Tampines Street 20, #17-35"),
-                new Tag("high"), new Note("Type 2 Diabetes"),
-                new Appointment("15-04-2026", "11:30")),
+                new Tag("high"),
+                List.of(new Note("Type 2 Diabetes")),
+                List.of(new Appointment("05-03-2099", "14:00"))),
             new Patient(new Name("Roy Balakrishnan"), new Phone("92624417"),
                 new Address("Blk 45 Aljunied Street 85, #11-31"),
-                null)
+                null,
+                Collections.emptyList(),
+                Collections.emptyList())
         };
     }
 
